RESOLVED FIXED124299
WKArrayIsMutable should not be mangled
https://bugs.webkit.org/show_bug.cgi?id=124299
Summary WKArrayIsMutable should not be mangled
Anders Carlsson
Reported 2013-11-13 11:43:04 PST
WKArrayIsMutable should not be mangled
Attachments
Patch (1.23 KB, patch)
2013-11-13 11:43 PST, Anders Carlsson
kling: review+
Anders Carlsson
Comment 1 2013-11-13 11:43:38 PST
Anders Carlsson
Comment 2 2013-11-13 12:01:44 PST
Note You need to log in before you can comment on or make changes to this bug.