WKArrayIsMutable should not be mangled https://bugs.webkit.org/show_bug.cgi?id=124299

Reviewed by Andreas Kling.

* Shared/API/c/WKDeprecatedFunctions.cpp:

Canonical link: https://commits.webkit.org/142501@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@159217 268f45cc-cd09-0410-ab3c-d52691b4dbfc